[gd_scene load_steps=2 format=3 uid="uid://dyghsrbi3vnmk"]

[ext_resource type="Script" path="res://mod/ecorebirth/scripts/multi_menu.gd" id="1_xmts8"]

[node name="MultiMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmts8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "MultiPlay"

[node name="OptionBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HostGame" type="Button" parent="CenterContainer/VBoxContainer/OptionBox"]
unique_name_in_owner = true
layout_mode = 2
text = "HostGame"

[node name="JoinGame" type="Button" parent="CenterContainer/VBoxContainer/OptionBox"]
unique_name_in_owner = true
layout_mode = 2
text = "JoinGame"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/OptionBox/HostGame" to="." method="_on_host_game_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionBox/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/OptionBox/JoinGame" to="." method="_on_join_game_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionBox/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
